fix: Remove unnecessary textarea z-index (#384)

--- a/components/textarea/textarea.component.scss
+++ b/components/textarea/textarea.component.scss
@@ -13,7 +13,6 @@
 
   textarea {
     position: relative;
-    z-index: 1;
     width: 100%;
     min-height: 170px;
     border: 2px solid colours.$colour-textinput-border;
